--- a/src/app/profileform/profileform.component.html
+++ b/src/app/profileform/profileform.component.html
@@ -10,8 +10,8 @@
 
             <h1 class="sidetitle">{{fname}}</h1>
 
-            <div class="dashboardside" routerLink="/dashboard">
-                <mat-list-item (click)="closeSideNav()">
+            <div class="dashboardside">
+                <mat-list-item (click)="goDashboard()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label>home</mat-icon>
                     <a class="dashboard-btn">Home</a>
                 </mat-list-item>
