--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -54,7 +54,7 @@
         <div>
             <mat-card class="scheduledcard">
                 <h1 class="title">
-                    Today's Scheduled Requests
+                    Today's Scheduled Requests ({{date | date: "MMMM dd, yyyy "}})
                 </h1>
                 <div class="table">
                     <table>
