--- a/src/app/bookingsummary/bookingsummary.component.css
+++ b/src/app/bookingsummary/bookingsummary.component.css
@@ -244,7 +244,6 @@
         font-size: 17px;
     }
     .submitBtn {
-        margin-left: 870px;
         width: 180px;
         height: 50px;
         background-color: #fcb42a;
@@ -259,13 +258,13 @@
         color: #14213D;
     }
     .submitBtn-disabled {
-        margin-left: 870px;
         width: 180px;
         height: 50px;
         border-color: #fcb42a !important;
         color: #14213D !important;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
+        text-align: center;
         margin-top: 20px;
     }
     .cancelBtn {
