--- a/src/app/paymentform/paymentform.component.html
+++ b/src/app/paymentform/paymentform.component.html
@@ -105,7 +105,7 @@
         </table>
 
         <div>
-            <button mat-raised-button class="payBtn" routerLink="/paymentthankyou">Pay with Cash</button>
+            <button mat-raised-button class="payBtn" (click)="paycashSubmit()">Pay with Cash</button>
             <h1 class="ortxt">OR</h1>
             <div class="paypalBtn" id="myPaypalButtons"></div>
         </div>
